@@ -1,3 +1,8 @@
+2013-03-11  Keith Seitz  <keiths@redhat.com>
+
+	* watchpoint.exp (test_no_hw_watchpoints): Add test using
+	both condition and thread.  Then delete the watchpoint.
+
 2013-03-11  Christian Himpel  <christian.himpel@intel.com>
 
 	* Makefile.in: Add btrace testsuite.
